[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Enemies/BasicShip.gd" type="Script" id=1]
[ext_resource path="res://Assets/pixel.png" type="Texture" id=2]
[ext_resource path="res://Assets/Asset Scenes/Explosion.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 20 )

[node name="BasicShip" type="Area2D" groups=["BasicShips", "Entity"]]
collision_layer = 4
collision_mask = 72
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Pixel" type="Sprite" parent="."]
modulate = Color( 0.482353, 0.443137, 0.443137, 1 )
scale = Vector2( 20, 40 )
texture = ExtResource( 2 )

[node name="ShootingTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="FiringPosition" type="Position2D" parent="."]
position = Vector2( -14, 0 )

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Explosion" parent="." instance=ExtResource( 3 )]

[connection signal="area_entered" from="." to="." method="on_body_entered"]
[connection signal="body_entered" from="." to="." method="on_body_entered"]
